Fixed the bg wrapping around the header

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,27 @@
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  background-color: blue;
+}
+
+header {
+    height: 100%;
+    width: 100%;
+}
+
 .mainheader {
 
   background-color:black;
   color: gold;
-  margin: 0%;
-  border: 0%;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .cslpfp {
